--- a/assets/css/modules/_work.sass
+++ b/assets/css/modules/_work.sass
@@ -31,21 +31,13 @@
         position: absolute
         display: none
         text-align: center
-
+        
+        // Add transition for smooth sliding
+        transition: all 0.3s ease-in-out
+        
         a
           text-decoration: none
           color: #858585
-
-        &-title
-          margin-top: 10px
-          font-size: 12px
-          font-weight: 700
-          text-transform: uppercase
-
-        &-description
-          display: none
-          max-width: 250px
-          margin: 0 auto
 
         &-image
           width: 150px
@@ -53,39 +45,49 @@
           margin: 0 auto
           border-radius: 50%
           overflow: hidden
-
+          
           img
             width: 100%
-
+            height: 100%
+            object-fit: cover
+        
+        &-title
+          margin-top: 10px
+          font-size: 12px
+          font-weight: 700
+          text-transform: uppercase
+        
+        &-description
+          display: none
+          max-width: 250px
+          margin: 0 auto
+          font-size: 14px
+          line-height: 1.4
+          color: #858585
+        
+        // Positioning for visible items
         &-left
           top: 50%
           left: 0
           transform: translateY(-50%)
           display: block
-
+        
         &-right
           top: 50%
           right: 0
           transform: translateY(-50%)
           display: block
-
+        
         &-center
           position: relative
           top: 30px
           left: 50%
           transform: translateX(-50%)
           display: block
-
-          a
-            color: $white
-
-          .slider--item-title
-            margin-top: 25px
-            font-size: 16px
-
+          
           .slider--item-description
             display: block
-
+          
           .slider--item-image
             width: 300px
             height: 300px
